# PlausiDen-Annotator

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  TOOLS.md
crates/annotator-relay/: Cargo.toml
crates/annotator-relay/src/: handlers.rs  lib.rs  main.rs  storage.rs
crates/annotator-relay/tests/: e2e_round_trip.rs
docs/: ANNOTATOR_VISION.md  ARCHITECTURE.md
examples/: sample-session.json
src/: annotator.js
tools/: build-bookmarklet.py
