[workspace]
resolver = "2"
members = ["crates/annotator-relay"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "FSL-1.1-MIT"
repository = "https://github.com/thepictishbeast/PlausiDen-Annotator"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tempfile = "3"
