[package]
name = "annotator-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PlausiDen-Annotator local relay — accepts JSON sessions POSTed by the bookmarklet, persists to disk, exposes list + retrieval endpoints. Targeted as a Tauri-shelled local daemon; runs as standalone axum process for now."

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "annotator-relay"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
